fix layout bug

--- a/source/stylesheets/refills/_navigation.scss
+++ b/source/stylesheets/refills/_navigation.scss
@@ -253,7 +253,7 @@ header.navigation {
   }
 
   a.sign-up {
-    margin-top: 13px;
+    margin-top: 1.2em;
     float: right;
     @include transition (all 0.2s ease-in-out);
     display: inline;
@@ -266,7 +266,7 @@ header.navigation {
     padding: .4em .5em;
 
     @include media($large-screen) {
-      padding: .4em 1em;
+      padding: .5em 1em;
     }
 
     &:hover {
@@ -281,7 +281,7 @@ header.navigation {
     $search-bar-border: 1px solid $search-bar-border-color;
     $search-bar-background: lighten($search-bar-border-color, 10);
 
-    padding: 13px 5px; 
+    padding: .85em .6em; 
     float: left;
     .search-and-submit {
       position: relative;
